@@ -159,7 +159,6 @@ BFD32_BACKENDS = \
 	elf32-d30v.lo \
 	elf32-fr30.lo \
 	elf32-gen.lo \
-	elf32-hppa.lo \
 	elf32-i386.lo \
 	elf32-i860.lo \
 	elf32-i960.lo \
@@ -284,7 +283,6 @@ BFD32_BACKENDS_CFILES = \
 	elf32-d30v.c \
 	elf32-fr30.c \
 	elf32-gen.c \
-	elf32-hppa.c \
 	elf32-i386.c \
 	elf32-i860.c \
 	elf32-i960.c \
@@ -425,8 +423,8 @@ CFILES = \
 ## This is a list of all .h files which are in the source tree.
 SOURCE_HFILES = \
 	aout-target.h aoutf1.h aoutx.h coffcode.h coffswap.h \
-	ecoffswap.h elf32-arm.h elf32-hppa.h elfcode.h elfcore.h \
-	elflink.h freebsd.h genlink.h go32stub.h hppa_stubs.h libaout.h \
+	ecoffswap.h elf32-arm.h elfcode.h elfcore.h \
+	elflink.h freebsd.h genlink.h go32stub.h libaout.h \
 	libbfd.h libcoff.h libecoff.h elf-bfd.h libhppa.h libieee.h \
 	libnlm.h liboasys.h libpei.h netbsd.h nlm-target.h nlmcode.h \
 	nlmswap.h ns32k.h peicode.h som.h vms.h
@@ -852,10 +850,6 @@ elf32-fr30.lo: elf32-fr30.c elf-bfd.h $(INCDIR)/elf/common.h \
 elf32-gen.lo: elf32-gen.c elf-bfd.h $(INCDIR)/elf/common.h \
   $(INCDIR)/elf/internal.h $(INCDIR)/elf/external.h $(INCDIR)/bfdlink.h \
   elf32-target.h
-elf32-hppa.lo: elf32-hppa.c elf-bfd.h $(INCDIR)/elf/common.h \
-  $(INCDIR)/elf/internal.h $(INCDIR)/elf/external.h $(INCDIR)/bfdlink.h \
-  $(INCDIR)/elf/hppa.h $(INCDIR)/elf/reloc-macros.h libhppa.h \
-  elf32-hppa.h elf-hppa.h hppa_stubs.h elf32-target.h
 elf32-i386.lo: elf32-i386.c $(INCDIR)/bfdlink.h elf-bfd.h \
   $(INCDIR)/elf/common.h $(INCDIR)/elf/internal.h $(INCDIR)/elf/external.h \
   $(INCDIR)/elf/i386.h $(INCDIR)/elf/reloc-macros.h elf32-target.h
