@@ -1,3 +1,15 @@
+2000-02-21  Ian Lance Taylor  <ian@zembu.com>
+
+	ELF HPPA doesn't work at present; remove it until it does.
+	* config.bfd: Comment out setting targ_defvec to
+	bfd_elf32_hppa_vec.
+	* Makefile.am: Rebuild dependencies.
+	(BFD32_BACKENDS): Remove elf32-hppa.lo.
+	(BFD32_BACKENDS_CFILES): Remove elf32-hppa.c.
+	(SOURCE_HFILES): Remove elf32-hppa.h and hppa_stubs.h.
+	* Makefile.in: Rebuild.
+	* targets.c (bfd_target_vector): Comment out bfd_elf32_hppa_vec.
+
 2000-02-18  Geoff Keating  <geoffk@cygnus.com>
 
 	* coffcode.h (coff_set_arch_mach_hook): Use free(), because there
